k8s/3-istio-sample/deploymentv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment-v1
  labels:
    app: hello-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
      - name: hello-app
        image: docker7gm/hello-world-app:v1.0.0
        ports:
        - containerPort: 8080
