k8s/3-istio-sample/deploymentv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment-v2
  labels:
    app: hello-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v2
  template:
    metadata:
      labels:
        app: hello-app
        version: v2
    spec:
      containers:
      - name: hello-app
        image: docker7gm/hello-world-app:v2.0.0
        ports:
        - containerPort: 8080
