k8s/3-istio-sample/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-app
spec:
  hosts:
  - "*"
  gateways:
  - hello-app-gateway
  http:
  - route:
    - destination:
        host: hello-app
        subset: hello-app-v1
        port:
          number: 80
      weight: 0
    - destination:
        host: hello-app
        subset: hello-app-v2
        port:
          number: 80
      weight: 100
